syntax = "proto3";

option csharp_namespace = "GodvilleClient";
package greet;

service GodvilleService {
  rpc Login(LoginData) returns (UserLoginOuput);
  rpc Register(RegisterData) returns (UserRegOutput);
  rpc Logout(ClientId) returns (Empty);
  rpc StartDuel(ClientId) returns (ServerIp);
  rpc GetStatistic(ClientId) returns (Statistic);
  rpc Check(Empty) returns (Empty);
}

message LoginData {
  string login = 1;
  string password = 2;
}

message RegisterData {
  LoginData loginData = 1;
  string nickname = 2;
  string heroname = 3;
}

message UserLoginOuput {
	int64 id = 1;
	string nickname = 2;
	int64 healthCount = 3;
	string heroName = 4;
}

message UserRegOutput {
	int64 id = 1;
	string login = 2;
	string hash = 3;
	string salt = 4;
	string nickname = 5;
}

message ClientId {
	int64 id = 1;
}

message Empty {}

message ServerIp {
	string ip = 1;
}

message Statistic {
	int64 wins = 1;
	int64 loses = 2;
}